--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -1,71 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Meta tags for responsiveness and character set -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Accessibility -->
-    <meta name="description" content="Search for domains within curated lists without compromising your privacy.">
-    <title>Domain Search Tool</title>
-    <!-- External CSS for styling -->
-    <link rel="stylesheet" href="./assets/css/simple.min.css">
-    <link rel="stylesheet" href="./assets/css/custom.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Search for domains in curated domain lists using regular expressions.">
+    <title>Live Domain Search</title>
+
+    <!-- Prefetch DNS -->
+    <link rel="dns-prefetch" href="//raw.githubusercontent.com">
+
+    <!-- External CSS & JavaScript Dependencies -->
+    <!-- Bootstrap CSS from CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="./assets/css/custom.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Loading spinner -->
-    <div id="loadingSpinner" style="display: none;">
-        <div class="spinner"></div>
+    <!-- Header Section -->
+    <header class="text-light bg-black py-3 px-5 top-0 w-100 z-3" style="min-height: 40px;">
+        <div class="d-flex justify-content-between align-items-center">
+            <h1><i class="bi bi-binoculars-fill text-success"></i> Live Domain Search</h1>
+            <!-- Dark Mode Toggle Switch -->
+            <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="darkModeToggle" style="cursor:pointer">
+                <label class="form-check-label" for="darkModeToggle" style="cursor:pointer">
+                    <i class="bi bi-moon-stars-fill text-warning"></i> Dark Mode
+                </label>
+            </div>
+        </div>
+    </header>
+
+    <!-- Main Content Area -->
+    <main class="container z-1" style="margin-top: 80px; margin-bottom: 60px;">
+        <div class="row justify-content-center">
+            <div class="col-lg-8 col-md-10">
+                <!-- Search Box Section -->
+                <section class="search-box rounded-3 shadow-lg p-4 mb-5">
+                    <!-- Header Information for Search Box -->
+                    <header class="mb-4">
+                        <h2>Live Domain Search <small class="text-body-secondary text-decoration-underline">Search for domains online</small></h2>
+                        <p class="lead">Use this form to search the lists for a specific domain or any phrase of your choice, including regular expressions.</p>
+                    </header>
+                    <hr>
+                    <div class="row">
+                        <!-- First Column: Select Domain List -->
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label for="listSelect" class="form-label fw-bold">
+                                    <i class="bi bi-menu-button"></i> Select Domain List to Search In
+                                </label>
+                                <select id="listSelect" class="form-select form-select-lg">
+                                    <optgroup label="Bon-Appetit/porn-domains/">
+                                        <option value="https://raw.githubusercontent.com/Bon-Appetit/porn-domains/master/block.txt" selected="selected">block.txt ("Blacklist") in porn-domains</option>
+                                        <option value="https://raw.githubusercontent.com/Bon-Appetit/porn-domains/master/pass.txt">pass.txt ("Whitelist") in porn-domains</option>
+                                    </optgroup>
+                                </select>
+                            </div>
+                        </div>
+
+                        <!-- Second Column: Input Search Phrase -->
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label for="searchInput" class="form-label fw-bold">
+                                    <i class="bi bi-cursor-text"></i> Enter Domain or Phrase
+                                </label>
+                                <input type="text" id="searchInput" class="form-control form-control-lg" placeholder="Enter domain or phrase">
+                            </div>
+                        </div>
+
+                        <!-- Advanced Search Options Toggle -->
+                        <div class="col-md-12">
+                            <p class="d-inline-flex gap-1">
+                                <a data-bs-toggle="collapse" href="#advancedSearchOptions" role="button" class="btn btn-outline-secondary btn-sm" aria-expanded="false" aria-controls="advancedSearchOptions">
+                                    <i class="bi bi-toggles2"></i> Toggle Advanced Options
+                                </a>
+                            </p>
+                            <!-- Advanced Search Options -->
+                            <div class="row">
+                                <div class="col">
+                                    <div class="collapse multi-collapse" id="advancedSearchOptions">
+                                        <div class="card card-body">
+                                            <!-- View Option: Cards or List -->
+                                            <div class="mb-3">
+                                                <label for="viewSelect" class="form-label fw-bold">
+                                                    <i class="bi bi-layout-sidebar text-info"></i> Display Results As:
+                                                </label>
+                                                <select id="viewSelect" class="form-select">
+                                                    <option value="cards" selected>Cards</option>
+                                                    <option value="list">List</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Search Button -->
+                    <div class="row">
+                        <div class="col text-center">
+                            <button id="searchBtn" class="btn btn-success btn-lg mt-3 text-uppercase">
+                                <i class="bi bi-search"></i> Search
+                            </button>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Results Section -->
+                <section id="results" class="my-3">
+                    <div id="resultsInfo"></div>
+                    <div class="row" id="resultsContainer"></div>
+                </section>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer Section -->
+    <footer class="text-light bg-black py-2 position-fixed bottom-0 w-100 z-3" style="min-height: 40px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-10">
+                    Hosted with <i class="bi bi-heart-fill text-danger"></i> by GitHub
+                </div>
+                <div class="col-md-2">
+                    <i class="bi bi-eye text-light"></i> <a href="https://github.com/Bon-Appetit/bon-appetit.github.io/blob/main/domain-search/index.html" target="_blank">View source code</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Scroll To Top Button -->
+    <button class="btn btn-secondary btn-md" id="toTop">
+        <i class="bi bi-arrow-up-circle-fill text-light fs-4"></i>
+    </button>
+
+    <!-- Loading Spinner (During Search) -->
+    <div id="loadingSpinner" class="loading-overlay d-none">
+        <div class="spinner-border text-primary" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
     </div>
 
-    <div class="container">
-        <!-- Header Section -->
-        <header>
-            <h1>Search for Domain</h1>
-            <p>Search for a certain domain or phrase in a list of domains.</p>
-        </header>
-
-        <!-- Privacy Policy Section -->
-        <details>
-            <summary>Your privacy is valuable &mdash; Read how it works</summary>
-            <p>Your web searches go directly to GitHub through your browser. We don't log or track your activity, and there are no ads. We rely solely on GitHub's infrastructure.</p>
-        </details>
-
-        <!-- Search Box Section -->
-        <section class="search-box">
-            <!-- Domain List Selection -->
-            <div class="field">
-                <label for="listSelect">Choose a list:</label>
-                <select id="listSelect">
-                    <!-- Option groups for organized lists -->
-                    <optgroup label="Bon-Appetit/porn-domains/">
-                        <option value="https://raw.githubusercontent.com/Bon-Appetit/porn-domains/master/block.txt" selected="selected">block.txt ("Blacklist") in porn-domains</option>
-                        <option value="https://raw.githubusercontent.com/Bon-Appetit/porn-domains/master/pass.txt">pass.txt ("Whitelist") in porn-domains</option>
-                    </optgroup>
-                </select>
+    <!-- Toast Container for Notifications -->
+    <div id="toastContainer" class="toast-container position-fixed bottom-0 start-50 translate-middle-x p-5" style="z-index: 1100; margin-bottom: 30px;">
+        <div id="notificationToast" class="toast align-items-center text-bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="d-flex">
+                <div class="toast-body" id="toastMessage">
+                    <!-- Toast message content -->
+                </div>
+                <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
-            <!-- Search Input -->
-            <div class="field">
-                <label for="searchInput">Search phrase:</label>
-                <input type="text" id="searchInput" placeholder="Enter domain or phrase">
-            </div>
-            <!-- Regular Expression Option -->
-            <div class="field field-options">
-                <input type="checkbox" id="regexCheck">
-                <label for="regexCheck">Use regular expression</label>
-            </div>
-            <button id="searchBtn">Search</button>
-
-            <!-- Link to Github -->
-            <p>Hosted by GitHub &ndash; <a href="https://github.com/Bon-Appetit/bon-appetit.github.io/blob/main/domain-search/index.html" target="_blank">View source code</a></p>
-        </section>
-
-        <!-- Results Section -->
-        <section id="results">
-            <!-- Results will be displayed here -->
-        </section>
+        </div>
     </div>
 
-    <!-- JavaScript for interactive components -->
-    <script src="./assets/js/custom.min.js"></script>
+    <!-- External JavaScript Dependencies -->
+    <!-- jQuery Library -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap JavaScript and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- Custom JavaScript -->
+    <script src="./assets/js/custom.js"></script>
 </body>
 </html>
