--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -82,6 +82,13 @@
                                 <div class="col">
                                     <div class="collapse multi-collapse" id="advancedSearchOptions">
                                         <div class="card card-body">
+                                            <!-- Highlight Option -->
+                                            <div class="mb-3">
+                                                <input class="form-check-input" type="checkbox" id="highlightResults" checked>
+                                                <label for="highlightResults" class="form-check-label">
+                                                    <i class="bi bi-highlighter text-info"></i> Highlight matches in results
+                                                </label>
+                                            </div>
                                             <!-- Sort Option -->
                                             <div class="mb-3">
                                                 <label for="sortSelect" class="form-label fw-bold">
