Change style from checkbox to switch

--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -84,10 +84,12 @@
                                         <div class="card card-body">
                                             <!-- Highlight Option -->
                                             <div class="mb-3">
-                                                <input class="form-check-input" type="checkbox" id="highlightResults" checked>
-                                                <label for="highlightResults" class="form-check-label">
-                                                    <i class="bi bi-highlighter text-info"></i> Highlight matches in results
-                                                </label>
+                                                <div class="form-check form-switch">
+                                                    <input class="form-check-input" type="checkbox" id="highlightResults" role="switch" checked>
+                                                    <label for="highlightResults" class="form-check-label">
+                                                        <i class="bi bi-highlighter text-info"></i> Highlight matches in results
+                                                    </label>
+                                                </div>
                                             </div>
                                             <!-- Sort Option -->
                                             <div class="mb-3">
