--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -156,14 +156,29 @@
     </main>
 
     <!-- Footer Section -->
-    <footer class="text-light bg-black py-2 position-fixed bottom-0 w-100 z-3" style="min-height: 40px;">
+    <footer class="text-light bg-black py-2 position-fixed bottom-0 w-100 z-3" style="height: 60px;">
         <div class="container">
             <div class="row">
-                <div class="col-md-10">
-                    Hosted with <i class="bi bi-heart-fill text-danger"></i> by GitHub
+                <div class="col-md-8 d-flex align-items-center">
+                    <ul class="nav">
+                        <li class="nav-item">
+                            Hosted with <i class="bi bi-heart-fill text-danger"></i> by GitHub
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-2">
-                    <i class="bi bi-eye text-light"></i> <a href="https://github.com/Bon-Appetit/bon-appetit.github.io/blob/main/domain-search/index.html" target="_blank">View source code</a>
+                <div class="col-md-4 text-end">
+                    <ul class="nav justify-content-end">
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/Bon-Appetit/bon-appetit.github.io/blob/main/domain-search/index.html" target="_blank">
+                                <i class="bi bi-eye text-info"></i> Source code
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/Bon-Appetit/bon-appetit.github.io/commits/main/domain-search" target="_blank">
+                                <i class="bi bi-clock-history text-info"></i> Changelog
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
