--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -66,7 +66,7 @@
                         <div class="col-md-6">
                             <div class="mb-3">
                                 <label for="listSelect" class="form-label fw-bold">
-                                    <i class="bi bi-menu-button"></i> List
+                                    <i class="bi bi-menu-button text-info"></i> List
                                     <i class="bi bi-info-circle text-primary" data-bs-toggle="tooltip"
                                         title="Select a list to search for domains."></i>
                                 </label>
@@ -87,7 +87,7 @@
                         <div class="col-md-6">
                             <div class="mb-3">
                                 <label for="searchInput" class="form-label fw-bold">
-                                    <i class="bi bi-cursor-text"></i> Domain name or phrase
+                                    <i class="bi bi-cursor-text text-info"></i> Domain name or phrase
                                     <i class="bi bi-info-circle text-primary" data-bs-toggle="tooltip"
                                         title="Enter a domain name or phrase to search. Use the toggle to enable regular expressions for advanced search patterns."></i>
                                 </label>
@@ -109,7 +109,7 @@
                         <div class="col-md-12">
                             <div class="mb-3">
                                 <label for="sha1Input" class="form-label fw-bold">
-                                    <i class="bi bi-hash"></i> Enter SHA1 Hash (optional)
+                                    <i class="bi bi-hash text-info"></i> Enter SHA1 Hash (optional)
                                     <i class="bi bi-info-circle text-primary" data-bs-toggle="tooltip"
                                         title="Enter a SHA1 hash to search for phrases in specific versions of the list. SHA1 hashes can be found on the commits page."></i>
                                 </label>
