--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Search for domains in curated domain lists using regular expressions.">
+    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <title>Domain Search</title>
 
     <!-- Prefetch DNS -->
