Change source code URL
Show the whole directory in repository rather than only the source code of the index.html file

--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -273,7 +273,7 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link"
-                            href="https://github.com/Bon-Appetit/bon-appetit.github.io/blob/main/domain-search/index.html"
+                            href="https://github.com/Bon-Appetit/bon-appetit.github.io/blob/main/domain-search"
                             target="_blank">
                             <i class="bi bi-eye text-info"></i> Source code
                         </a>
