--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -198,6 +198,25 @@
         </div>
         <div class="offcanvas-body">
 
+            <div class="mb-4">
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-link"
+                            href="https://github.com/Bon-Appetit/bon-appetit.github.io/blob/main/domain-search"
+                            target="_blank">
+                            <i class="bi bi-eye text-info"></i> Source code
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                            href="https://github.com/Bon-Appetit/bon-appetit.github.io/commits/main/domain-search"
+                            target="_blank">
+                            <i class="bi bi-clock-history text-info"></i> Changelog
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
             <!-- Accordion Section with Information -->
             <div class="accordion" id="accordionInfo">
                 <!-- Accordion Item 1 -->
@@ -235,22 +254,6 @@
                 </div>
                 <!-- Accordion Item 3 -->
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Will searches be saved by "Domain Search"?
-                        </button>
-                    </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                        data-bs-parent="#accordionInfo">
-                        <div class="accordion-body">
-                            No, searches are not saved. Domain Search performs all filtering on the client side without
-                            storing your search queries or results.
-                        </div>
-                    </div>
-                </div>
-                <!-- Accordion Item 4 -->
-                <div class="accordion-item">
                     <h2 class="accordion-header" id="headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -266,23 +269,97 @@
                         </div>
                     </div>
                 </div>
+                <!-- Accordion Item 4 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            Will searches be saved by "Domain Search"?
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionInfo">
+                        <div class="accordion-body">
+                            No, searches are not saved. Domain Search performs all filtering on the client side without
+                            storing your search queries or results.
+                        </div>
+                    </div>
+                </div>
+                <!-- Accordion Item 5 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFive">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                            Who is maintaining "Domain Search"?
+                        </button>
+                    </h2>
+                    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+                        data-bs-parent="#accordionInfo">
+                        <div class="accordion-body">
+                            "Domain Search" is maintained by <a href="https://github.com/CodeAlDente"
+                                target="_blank">CodeAlDente</a> for <a href="https://github.com/Bon-Appetit"
+                                target="_blank">Bon-Appetit</a>.
+                        </div>
+                    </div>
+                </div>
+                <!-- Accordion Item 6 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingSix">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                            How can I support "Domain Search"?
+                        </button>
+                    </h2>
+                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix"
+                        data-bs-parent="#accordionInfo">
+                        <div class="accordion-body">
+                            You can support "Domain Search" by starring the repository on GitHub, reporting issues, or
+                            contributing code and improvements. Sharing the tool with others is also a great way to
+                            help! Donations are also welcome and appreciated. You can support me at
+                            <a href="https://www.buymeacoffee.com/CodeAlDente" target="_blank">Buy Me a Coffee</a>.
+                        </div>
+                    </div>
+                </div>
+                <!-- Accordion Item 7 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingSeven">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                            I have more questions, how to get in touch?
+                        </button>
+                    </h2>
+                    <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven"
+                        data-bs-parent="#accordionInfo">
+                        <div class="accordion-body">
+                            If you have any questions, want to report a bug, or request a new feature, feel free to
+                            reach out via email at <a href="mailto:mail@codealdente.ovh">mail@codealdente.ovh</a> (<a
+                                href="https://keys.mailvelope.com/pks/lookup?op=get&search=mail@codealdente.ovh"
+                                target="_blank">PGP-Key</a>). Alternatively, you can create an issue on <a
+                                href="https://github.com/Bon-Appetit/bon-appetit.github.io/issues"
+                                target="_blank">GitHub Issues</a>.
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- End of Accordion Section -->
 
             <div class="my-4">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link"
-                            href="https://github.com/Bon-Appetit/bon-appetit.github.io/blob/main/domain-search"
-                            target="_blank">
-                            <i class="bi bi-eye text-info"></i> Source code
+                        <a class="nav-link" href="mailto:mail@codealdente.ovh" target="_blank">
+                            <i class="bi bi-envelope-fill text-info"></i> mail@codealdente.ovh
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
-                            href="https://github.com/Bon-Appetit/bon-appetit.github.io/commits/main/domain-search"
+                            href="https://keys.mailvelope.com/pks/lookup?op=get&search=mail@codealdente.ovh"
                             target="_blank">
-                            <i class="bi bi-clock-history text-info"></i> Changelog
+                            <i class="bi bi-key-fill text-info"></i> PGP-Key
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.buymeacoffee.com/CodeAlDente" target="_blank">
+                            <i class="bi bi-cup-fill text-info"></i> Buy Me a Coffee
                         </a>
                     </li>
                 </ul>
