--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -68,8 +68,8 @@
                             <div class="mb-3">
                                 <label for="listSelect" class="form-label fw-bold">
                                     <i class="bi bi-menu-button text-info"></i> List
-                                    <i class="bi bi-info-circle text-primary" data-bs-toggle="tooltip"
-                                        title="Select a list to search for domains."></i>
+                                    <i class="bi bi-info-circle text-primary" data-bs-toggle="popover"
+                                    data-bs-content="Select a list to search for domains."></i>
                                 </label>
                                 <select id="listSelect" class="form-select form-select-lg">
                                     <optgroup label="Bon-Appetit/porn-domains/">
@@ -89,14 +89,14 @@
                             <div class="mb-3">
                                 <label for="searchInput" class="form-label fw-bold">
                                     <i class="bi bi-cursor-text text-info"></i> Domain name or phrase
-                                    <i class="bi bi-info-circle text-primary" data-bs-toggle="tooltip"
-                                        title="Enter a domain name or phrase to search. Use the toggle to enable regular expressions for advanced search patterns."></i>
+                                    <i class="bi bi-info-circle text-primary" data-bs-toggle="popover"
+                                        data-bs-content="Enter a domain name or phrase to search. Use the toggle to enable regular expressions for advanced search patterns."></i>
                                 </label>
                                 <div class="input-group">
                                     <input type="text" id="searchInput" class="form-control form-control-lg"
                                         placeholder="Enter domain or phrase">
-                                    <span class="input-group-text" data-bs-toggle="tooltip"
-                                        data-bs-title="Enable regular expression">
+                                    <span class="input-group-text" data-bs-toggle="popover"
+                                        data-bs-content="Enable regular expression">
                                         <div class="form-check form-switch">
                                             <i class="bi bi-regex text-primary"></i> <input class="form-check-input"
                                                 type="checkbox" id="useRegex" role="switch">
@@ -111,8 +111,8 @@
                             <div class="mb-3">
                                 <label for="sha1Input" class="form-label fw-bold">
                                     <i class="bi bi-hash text-info"></i> Enter SHA1 Hash (optional)
-                                    <i class="bi bi-info-circle text-primary" data-bs-toggle="tooltip"
-                                        title="Enter a SHA1 hash to search for phrases in specific versions of the list. SHA1 hashes can be found on the commits page."></i>
+                                    <i class="bi bi-info-circle text-primary" data-bs-toggle="popover"
+                                        data-bs-content="Enter a SHA1 hash to search for phrases in specific versions of the list. SHA1 hashes can be found on the commits page."></i>
                                 </label>
                                 <input type="text" id="sha1Input" class="form-control"
                                     placeholder="Enter SHA1 hash for specific version">
