Adjust to new fielname handling

--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -72,14 +72,7 @@
                                     data-bs-content="Select a list to search for domains."></i>
                                 </label>
                                 <select id="listSelect" class="form-select form-select-lg">
-                                    <optgroup label="Bon-Appetit/porn-domains/">
-                                        <option
-                                            value="https://raw.githubusercontent.com/Bon-Appetit/porn-domains/master/block.txt"
-                                            selected="selected">block.txt ("Blacklist") in porn-domains</option>
-                                        <option
-                                            value="https://raw.githubusercontent.com/Bon-Appetit/porn-domains/master/pass.txt">
-                                            pass.txt ("Whitelist") in porn-domains</option>
-                                    </optgroup>
+                                    <option value="" disabled selected>Loadings lists...</option>
                                 </select>
                             </div>
                         </div>
