--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -320,6 +320,23 @@
                         </div>
                     </div>
                 </div>
+                <!-- Accordion Item 8 -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingEight">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                            Licenses
+                        </button>
+                    </h2>
+                    <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight"
+                        data-bs-parent="#accordionInfo">
+                        <div class="accordion-body">
+                            <ul>
+                                <li>List content <a target="_blank" href="https://github.com/Bon-Appetit/porn-domains">Bon-Appetit/porn-domains</a> © 2018-2025 by <a target="_blank" href="https://github.com/CodeAlDente">CodeAlDente</a> is licensed under <a target="_blank" href="https://github.com/Bon-Appetit/porn-domains/blob/main/LICENSE">MIT</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- End of Accordion Section -->
 
