Update lead text
- Remove version search
- Include "bulk search"

--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -57,9 +57,7 @@
                     <!-- Header Information for Search Box -->
                     <header class="mb-4">
                         <h2>Domain Search</h2>
-                        <p class="lead">Use this form to search certain lists for a specific domain or any phrase,
-                            including regular expressions. Searches can even be performed across different commit states
-                            (versions).</p>
+                        <p class="lead">Use this form to search certain lists for a specific domain or any phrase, including regular expressions. You can also search for multiple phrases or domains at once (bulk search).</p>
                     </header>
 
                     <div class="row">
