Update license information

--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -344,7 +344,7 @@
                         data-bs-parent="#accordionInfo">
                         <div class="accordion-body">
                             <ul>
-                                <li>List content <a target="_blank" href="https://github.com/Bon-Appetit/porn-domains">Bon-Appetit/porn-domains</a> © 2018-2025 by <a target="_blank" href="https://github.com/CodeAlDente">CodeAlDente</a> is licensed under <a target="_blank" href="https://github.com/Bon-Appetit/porn-domains/blob/main/LICENSE">MIT</a></li>
+                                <li><a target="_blank" href="https://github.com/Bon-Appetit/porn-domains">Bon-Appetit/porn-domains</a> by <a target="_blank" href="https://github.com/CodeAlDente">CodeAlDente</a> is licensed under <a target="_blank" href="https://github.com/Bon-Appetit/porn-domains/blob/main/LICENSE">CC BY-SA 4.0</a>.</li>
                             </ul>
                         </div>
                     </div>
