Add option to search for exact matches
- Add option to search for exact matches (case-sensitive, full word/line).
- Disable the highlighter when Exact Match is enabled.

--- a/domain-search/index.html
+++ b/domain-search/index.html
@@ -126,6 +126,15 @@
                                                     </label>
                                                 </div>
                                             </div>
+                                            <!-- Exact Match Option -->
+                                            <div class="mb-3">
+                                                <div class="form-check form-switch">
+                                                    <input class="form-check-input" type="checkbox" id="exactMatch" role="switch">
+                                                    <label class="form-check-label" for="exactMatch">
+                                                        <i class="bi bi-type text-primary"></i> Exact match only
+                                                    </label>
+                                                </div>
+                                            </div>
                                             <!-- Highlight Option -->
                                             <div class="mb-3">
                                                 <div class="form-check form-switch">
